@@ -1,5 +1,10 @@
 2006-03-28  Ross Burton  <ross@burtonini.com>
 
+	* src/sj-extracting.c:
+	Handle sortnames being NULL.
+
+2006-03-28  Ross Burton  <ross@burtonini.com>
+
 	* src/sj-main.c:
 	Don't leak the GnomeProgram (#335749)
 
